--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\Backend\UI\Auswahlzahnrad.cs" />
     <Compile Include="Assets\Backend\Helper\MultiSelector.cs" />
     <Compile Include="Assets\Backend\UI\BauklotzZielgebiet.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\GoNoGo.cs" />
     <Compile Include="Assets\Backend\Helper\Selector.cs" />
     <Compile Include="Assets\Backend\UI\RichtungsstickerInstancer.cs" />
     <Compile Include="Assets\Backend\ControlFlow\Block.cs" />
@@ -82,7 +83,7 @@
     <Compile Include="Assets\Backend\UI\Spielbrett.cs" />
     <Compile Include="Assets\Backend\ControlFlow\Implementations\StabilityTrials.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Randomizer.cs" />
-    <Compile Include="Assets\ExekutiveFunktionen\Scripts\GoNoGo.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\AnimalSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ExekutiveFunktionen\TextMesh Pro\Shaders\TMPro.cginc" />
