Implement CSV Basics with Data

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Backend\UI\Auswahlzahnrad.cs" />
     <Compile Include="Assets\Backend\Helper\MultiSelector.cs" />
     <Compile Include="Assets\Backend\UI\BauklotzZielgebiet.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSPlay.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSPractice.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSIntroduction.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\GoNoGo\GoNoGo.cs" />
@@ -91,7 +92,7 @@
     <Compile Include="Assets\Backend\ControlFlow\Implementations\StabilityTrials.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\Randomizer.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\corsiTextSelect.cs" />
-    <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSPlay.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSDataSaver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ExekutiveFunktionen\TextMesh Pro\Shaders\TMPro.cginc" />
