--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Assets\Backend\ControlFlow\Implementations\StabilityTrials.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\Randomizer.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\corsiTextSelect.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSIntro.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ExekutiveFunktionen\TextMesh Pro\Shaders\TMPro.cginc" />
