--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\Randomizer.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\corsiTextSelect.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSIntro.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\CSOutro.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ExekutiveFunktionen\TextMesh Pro\Shaders\TMPro.cginc" />
