--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\CardSorting\CSIntro.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\CorsiIntro.cs" />
     <Compile Include="Assets\ExekutiveFunktionen\Scripts\Corsi\Outro.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\GoNoGo\GoNoGoIntro.cs" />
+    <Compile Include="Assets\ExekutiveFunktionen\Scripts\GoNoGo\GoNoGoOutro.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ExekutiveFunktionen\TextMesh Pro\Shaders\TMPro.cginc" />
